<resources>
    <string name="app_name">AttendEase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_dr">New Doctor</string>
    <string name="new_std">New Student</string>
    <string name="new_material">New Material</string>
    <string name="attendance">Attendance</string>
    <string name="new_dept">New Department</string>
    <string name="school_year">New Academic Year</string>
    <string name="dr_name">Dr Name</string>
    <string name="dr_s_email">Dr\'s email</string>
    <string name="add_dr">New Doctor</string>
    <string name="password">password</string>
    <string name="all_doctors">All Doctors</string>
    <string name="mngmnt">Management</string>
    <string name="archive">Archiving Data</string>
    <string name="check">Check Attendance</string>
    <string name="drl">Doctor</string>
    <string name="stdl">Student</string>
    <string name="adminl">Admin</string>
    <string name="show">Show Attendance</string>
    <string name="take">Take Attendance</string>
    <string name="enter_dr_name">Dr Name</string>
    <string name="enter_dr_email">Dr Email</string>
    <string name="enter_dr_password">Dr Password</string>
    <string name="department_name">Department Name</string>
    <string name="academic_year">Academic Year</string>
    <string name="new_curriculum">Update Curriculum</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="language_name">Language Name</string>
    <string name="all_languages">All Languages</string>
    <string name="new_language">New Language</string>
    <string name="new_semester">New Semester</string>
    <string name="all_semesters">All Semesters</string>
    <string name="semester_name">Semester Name</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="language">Language</string>
    <string name="department">Department</string>
    <string name="semester">Semester</string>
    <string name="add">Add</string>
    <string name="edit_dr">Edit Doctor Materials</string>
    <string name="edit_std">Edit Student Materials</string>
    <string name="edit_dr_matrials">Edit Dr Matrials</string>
    <string name="add_department">Add Department</string>
    <string name="add_langugae">Add Langugae</string>
    <string name="add_material">Add Material</string>
    <string name="add_semester">Add Semester</string>
    <string name="add_student">Add Student</string>
    <string name="add_academic_year">Add Academic Year</string>
    <string name="show_materials">Show Materials</string>
    <string name="details">Details</string>
    <string name="archive_all">Archive</string>
    <string name="update">Update</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="show_students">Show Students</string>
    <string name="welcome_to_attendease">Welcome to AttendEase</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
</resources>