<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp"
    android:backgroundTint="@color/white"
    tools:context=".AddLangFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:backgroundTint="@color/white"
    >
    <EditText
        android:id="@+id/langName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:minHeight="60dp"
        android:textColorHint="@color/red"
        android:textColor="@color/black"
        android:background="@drawable/view_background"
        android:hint="@string/language_name"
        android:layout_gravity="center_horizontal" />


    <androidx.cardview.widget.CardView
        android:id="@+id/addLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        android:layout_marginVertical="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/add_langugae"
            android:gravity="center"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_languages"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/AllLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginVertical="10dp"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />


</LinearLayout>
</ScrollView>