<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddDrFragment" >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/DrName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints=""
        android:background="@drawable/view_background"
        android:gravity="center"
        android:hint="@string/enter_dr_name"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="40dp"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/DrEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/view_background"
        android:gravity="center"
        android:hint="@string/enter_dr_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="40dp"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/DrPassword"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/view_background"
        android:gravity="center"
        android:hint="@string/enter_dr_password"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="40dp"
        android:textColorHint="@color/red"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/BtnAddDr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:layout_marginHorizontal="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/add_dr"
            android:gravity="center"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <Switch
        android:id="@+id/showdrs"
        android:layout_width="wrap_content"
        android:layout_height="55dp"

        android:text="Show Doctors"
        android:textColor="@color/red"
        android:textSize="23sp"/>

    <TextView
        android:id="@+id/AllDr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginVertical="10dp"
        android:textSize="18sp"
        />




</LinearLayout>
</ScrollView>