<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:backgroundTint="@color/white"
    tools:context=".StdLoginFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="center_vertical"
    >


    <EditText
        android:id="@+id/stdemail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:gravity="center"
        android:textColorHint="@color/red"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/view_background" />

    <EditText
        android:id="@+id/stdpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="@color/red"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/view_background" />


    <androidx.cardview.widget.CardView
        android:id="@+id/stdbtnlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:layout_marginVertical="20dp"
        app:cardPreventCornerOverlap="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/log_in"
            android:gravity="center"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/teststudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

</LinearLayout>
</ScrollView>