<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp"
    android:backgroundTint="@color/white"
    tools:context=".AddSemFragment">
<LinearLayout
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:backgroundTint="@color/white"
   >
    <EditText
        android:id="@+id/SemName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:textColorHint="@color/red"
        android:textColor="@color/black"
        android:background="@drawable/view_background"
        android:hint="@string/semester_name"
        android:layout_gravity="center_horizontal" />



    <androidx.cardview.widget.CardView
        android:id="@+id/addSem"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        android:layout_marginHorizontal="10dp"
        app:cardPreventCornerOverlap="true"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/add_semester"
            android:gravity="center"
            android:background="@drawable/btn_background"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_semesters"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/AllSem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginVertical="10dp"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        />


</LinearLayout>
</ScrollView>