<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:backgroundTint="@color/white"
    tools:context=".AdminFunctionsFragment" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/managment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mngmnt"
            android:gravity="center"
            android:background="@drawable/view_background"
            android:textColor="@color/red"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/archive"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/archive"
            android:gravity="center"
            android:background="@drawable/view_background"
            android:textColor="@color/red"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cheking"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/check"
            android:gravity="center"
            android:background="@drawable/view_background"
            android:textColor="@color/red"
            android:textSize="20sp"
            />
    </androidx.cardview.widget.CardView>

</LinearLayout>
</ScrollView>